Fix Safari progress bar overflow

--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -250,6 +250,7 @@ input[type="text"] {
                 appearance: none;
 
         width: calc(100% - 6.5rem);
+        max-width: calc(100% - 6.5rem);
         height: 1rem;
         border: none;
 
